--- a/Project.rkt-autorec.Project
+++ b/Project.rkt-autorec.Project
@@ -6,6 +6,7 @@
   (cond
     [(number? expr) expr]
     [(pair? expr)
+     (printf "~a\n" expr)
      (letrec ([op (tableOperator? (car expr) Table)]
               [args (cdr expr)])
        (cond
@@ -20,12 +21,14 @@
          
          ;; For conditonal if statement
          [(equal? op 'if)
-          (if (mainStartEval (car args) Table)
-               (mainStartEval (cadr args) Table)
-               (mainStartEval (caddr args) Table))]
+          (let ([test (mainStartEval (car args) Table)]
+               [alternate (mainStartEval (cadr args) Table)]
+               [consequent (mainStartEval (caddr args) Table)])
+          (if test alternate consequent)
+          )]
 
          ;; For constants for variables we will look up in namespace
-         [(equal? op 'quote) (car args)]
+         [(equal? op 'quote) args]
 
          [(equal? op 'car) (car (mainStartEval (cadr expr) Table))]
 
@@ -92,13 +95,14 @@
 
 (startEval '(let ([+ *]) (+ 5 5)))
 
-(startEval '(letrec ([y 1] [x 2]) (+ x y)))
+#|(startEval '(letrec ([y 1] [x 2]) (+ x y)))
 (startEval '(let ([x 5])
 (let ([y 10])
     (+ x y)))
 )
 (startEval '((lambda (x y) (+ x y)) 1 3))
-(startEval '(((lambda (x) (lambda (y) (+ x y)))1)2))
+(startEval '(((lambda (x) (lambda (y) (+ x y)))1)2)) |#
+
 
 (print
 (startEval
@@ -106,4 +110,4 @@
 (lambda (x)
 (if (= x 0) (quote 1)
 (* x (fact (- x 1)))))))
-(fact 10))))
+(fact 1))))
